# FindGeoLocation

./: .gitignore  LICENSE  README.md  data_collection.ipynb  extracting_graphs.ipynb  main.py  pyproject.toml  todo.txt  will_delete.py
LocationProject/: gather_data.ipynb  trial_data.ipynb  will_delete.ipynb
LocationProject/TweetLocationFinder/: EntityExtractor.py  __init__.py
LocationProject/TweetLocationFinder/GatherUserLoc/: GatherFiles.py  GatherLoc.py  GatherLoc_WOGuess.py  GatherLoc_WithGuess.py
data/: cities.txt  city_street.xlsx  istatistiki bolge birimleri siniflamasi 1.duzey_e gore evden genisbant baglanti ile internet erisimi.xls  main_cities.json  main_cities_finished.json  main_cities_finished_2.json  main_cities_finished_3.json  temp.geojson
examples_and_figs/: examples.py
examples_and_figs/example_1/figure/: figs.ipynb
examples_and_figs/example_2/figure/: figs.ipynb
extract_loc_entities/: loc_finder.py
extract_loc_entities/notebooks/: DISPOSABLE.py  data_WO_guess.ipynb  data_collection.ipynb
gathered_data - OLD/individual_results/txt/: tweet_loc.txt  user_loc.txt
gathered_data - OLD/whole_results/: trial_data_save.json  trial_data_save2.json  trial_data_saveWO1.json
gathered_data/individual_results/: tweet_loc.json
gathered_data/whole_results/: trial_data_save3.json
graphs/explanation/: graphs.md
src/: examples.py
src/TPS/: GatherFiles.py  GatherLocation.py  __init__.py
src/data/: mitings.csv  populations.json  yillara-gore-il-nufuslari.xls
trial_data_gathered/: data_info.md  empty_data.json
(+24 files in other folders)
